Extractor working again!